Fix list wrapping and bold link color on about page (#3)
* fix: fix list indentation and bold link colors in about page

Agent-Logs-Url: https://github.com/darnstrom/darnstrom.github.io/sessions/4d210daa-f400-437c-b774-f9c2527545c7


* Fix paper formatting

---------

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,9 @@ a, table.table a {
   &:hover:after :not(.nav-item.dropdown) {
     width: 100%;
   }
+  strong {
+    color: inherit;
+  }
 }
 
 .anon{
@@ -81,6 +84,16 @@ blockquote {
     .address {
       p { display: block; }
     }
+  }
+}
+
+// List indentation fix (MDB resets padding-left to 0)
+.post article {
+  ul, ol {
+    padding-left: 2rem;
+  }
+  li {
+    margin-bottom: 0.25rem;
   }
 }
 
